--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 97 2009-06-19 16:23:29Z fabriziogiudici $
+ * $Id: pom.xml 98 2009-06-19 21:46:22Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -151,40 +151,6 @@
             </plugin>
            
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <inherited>false</inherited>
-                <dependencies>
-                    <dependency>
-                        <groupId>ant</groupId>
-                        <artifactId>ant-trax</artifactId>
-                        <version>1.6.5</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>cobertura-maven-plugin</artifactId>
-                        <version>2.2</version>
-                    </dependency>
-                </dependencies>
-                <executions>
-                    <execution>
-                        <phase>install</phase>
-                        <configuration>
-                            <tasks>
-                                <property name="plugin_classpath" refid="maven.plugin.classpath"/>
-                                <!-- property name="plugin_classpath" refid="maven.dependency.org.codehaus.mojo:cobertura-maven-plugin:classifier:jar.path"/ -->
-                                <available file="etc/cobertura-merge-reports.xml" property="cmrexists"/>
-                                <ant antfile="etc/cobertura-merge-reports.xml" target="merge-reports" inheritAll="true"/>
-                            </tasks>
-                        </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
- 
-            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
                 <version>2.2</version>
@@ -263,6 +229,7 @@
         <module>EL</module>
         <module>SwingBinding</module>
         <module>OneJar</module>
+        <module>CoberturaMerge</module>
     </modules>
 
 </project>
