--- a/Examples/pom.xml
+++ b/Examples/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 149 2009-07-22 00:27:27Z fabriziogiudici $
+ * $Id: pom.xml 150 2009-07-22 00:28:25Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -56,6 +56,11 @@
             </plugins>
         </pluginManagement>
     </build>
+
+    <modules>
+        <module>BeanExamples</module>
+        <module>SwingExamples</module>
+    </modules>
 
 </project>
 
