--- a/EL/pom.xml
+++ b/EL/pom.xml
@@ -25,7 +25,7 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 149 2009-07-22 00:27:27Z fabriziogiudici $
+ * $Id: pom.xml 151 2009-07-22 17:14:40Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" 
@@ -35,7 +35,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.jdesktop.betterbeansbinding</groupId>
+        <groupId>it.tidalwave.betterbeansbinding</groupId>
         <artifactId>betterbeansbinding</artifactId>
         <version>1.3.0-SNAPSHOT</version>
     </parent>
