--- a/pom.xml
+++ b/pom.xml
@@ -25,14 +25,14 @@
  *
  ***********************************************************************************************************************
  *
- * $Id: pom.xml 149 2009-07-22 00:27:27Z fabriziogiudici $
+ * $Id: pom.xml 151 2009-07-22 17:14:40Z fabriziogiudici $
  *
  ******************************************************************************************************************* -->
  <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     
-    <groupId>org.jdesktop.betterbeansbinding</groupId>
+    <groupId>it.tidalwave.betterbeansbinding</groupId>
     <artifactId>betterbeansbinding</artifactId>
     <packaging>pom</packaging>
     <version>1.3.0-SNAPSHOT</version>
