--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,9 @@
     </issueManagement>
 
     <scm>
-        <connection>scm:svn:http://kenai.com/svn/betterbeansbinding~svn/trunk/src</connection>
-        <developerConnection>scm:svn:https://kenai.com/svn/betterbeansbinding~svn/trunk/src</developerConnection>
-        <url>https://kenai.com/svn/betterbeansbinding~svn/trunk/src</url>
+        <connection>scm:hg:http://kenai.com/hg/betterbeansbinding~src</connection>
+        <developerConnection>scm:hg:https://kenai.com/hg/betterbeansbinding~src</developerConnection>
+        <url>http://kenai.com/projects/betterbeansbinding/sources/src/show</url>
     </scm>
 
     <developers>
