--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -35,11 +35,11 @@
     <parent>
         <groupId>it.tidalwave.betterbeansbinding</groupId>
         <artifactId>betterbeansbinding</artifactId>
-        <version>1.3.0</version>
+        <version>1.3.1-SNAPSHOT</version>
     </parent>
     
     <artifactId>betterbeansbinding-core</artifactId>
-    <version>1.3.0</version>
+    <version>1.3.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>BetterBeansBinding Core</name>
 
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>it.tidalwave.betterbeansbinding</groupId>
             <artifactId>betterbeansbinding-el</artifactId>
-            <version>1.3.0</version>
+            <version>1.3.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
