--- a/EL/pom.xml
+++ b/EL/pom.xml
@@ -35,10 +35,10 @@
     <parent>
         <groupId>it.tidalwave.betterbeansbinding</groupId>
         <artifactId>betterbeansbinding</artifactId>
-        <version>1.3.0</version>
+        <version>1.3.1-SNAPSHOT</version>
     </parent>
 
-    <version>1.3.0</version>
+    <version>1.3.1-SNAPSHOT</version>
     <artifactId>betterbeansbinding-el</artifactId>
     <packaging>jar</packaging>
     <name>BetterBeansBinding EL</name>
