--- a/Examples/SwingExamples/pom.xml
+++ b/Examples/SwingExamples/pom.xml
@@ -35,11 +35,11 @@
     <parent>
         <groupId>it.tidalwave.betterbeansbinding</groupId>
         <artifactId>betterbeansbinding-examples</artifactId>
-        <version>1.3.0</version>
+        <version>1.3.1-SNAPSHOT</version>
     </parent>
     
     <artifactId>betterbeansbinding-swingexamples</artifactId>
-    <version>1.3.0</version>
+    <version>1.3.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>BetterBeansBinding Swing Examples</name>
 
@@ -47,17 +47,17 @@
         <dependency>
             <groupId>it.tidalwave.betterbeansbinding</groupId>
             <artifactId>betterbeansbinding-core</artifactId>
-            <version>1.3.0</version>
+            <version>1.3.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>it.tidalwave.betterbeansbinding</groupId>
             <artifactId>betterbeansbinding-swingbinding</artifactId>
-            <version>1.3.0</version>
+            <version>1.3.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>it.tidalwave.betterbeansbinding</groupId>
             <artifactId>beanexamples</artifactId>
-            <version>1.3.0</version>
+            <version>1.3.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>net.java.dev.appframework</groupId>
