--- a/Examples/pom.xml
+++ b/Examples/pom.xml
@@ -35,7 +35,7 @@
     <parent>
         <groupId>it.tidalwave.betterbeansbinding</groupId>
         <artifactId>betterbeansbinding</artifactId>
-        <version>1.3.0</version>
+        <version>1.3.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>betterbeansbinding-examples</artifactId>
