--- a/SwingBinding/pom.xml
+++ b/SwingBinding/pom.xml
@@ -35,11 +35,11 @@
     <parent>
         <groupId>it.tidalwave.betterbeansbinding</groupId>
         <artifactId>betterbeansbinding</artifactId>
-        <version>1.3.0</version>
+        <version>1.3.1-SNAPSHOT</version>
     </parent>
     
     <artifactId>betterbeansbinding-swingbinding</artifactId>
-    <version>1.3.0</version>
+    <version>1.3.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>BetterBeansBinding SwingBinding</name>
 
@@ -47,12 +47,12 @@
         <dependency>
             <groupId>it.tidalwave.betterbeansbinding</groupId>
             <artifactId>betterbeansbinding-core</artifactId>
-            <version>1.3.0</version>
+            <version>1.3.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>it.tidalwave.betterbeansbinding</groupId>
             <artifactId>beanexamples</artifactId>
-            <version>1.3.0</version>
+            <version>1.3.1-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
