--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     <groupId>it.tidalwave.betterbeansbinding</groupId>
     <artifactId>betterbeansbinding</artifactId>
     <packaging>pom</packaging>
-    <version>1.3.0</version>
+    <version>1.3.1-SNAPSHOT</version>
     <name>BetterBeansBinding</name>
 
     <url>http://betterbeansbinding.kenai.com</url>
