--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     <parent>
         <groupId>it.tidalwave.thesefoolishthings</groupId>
         <artifactId>superpom</artifactId>
-        <version>1.0.14-SNAPSHOT</version>
+        <version>1.5</version>
     </parent>
  
     <groupId>it.tidalwave.betterbeansbinding</groupId>
