--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -36,6 +36,7 @@
         <groupId>it.tidalwave.betterbeansbinding</groupId>
         <artifactId>betterbeansbinding</artifactId>
         <version>1.3.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     
     <artifactId>betterbeansbinding-core</artifactId>
